# rust-hexagonal-architecture-test

./: Cargo.toml  config.yml
.sqlx/: query-0088e3dd929987cbe3f7c479956541be8b1a1e3a5f76b397374ec48a8e27c575.json  query-d5231a17ba444c31830f8d2456a6c941d2ba96ef24b507bc2ba0aba22601dabb.json
migrations/: 20260705193548_create_users_and_audit_log_tables.sql
src/: config.rs  error.rs  features.rs  lib.rs  main.rs  service.rs
src/app/: features.rs
src/app/features/: auth_audit_local.rs
src/application/: mod.rs
src/compose/: postgres.rs
src/contracts/audit/: audit.rs  mod.rs  uow.rs
src/domain/: mod.rs  uow.rs
src/domain/audit/: audit.rs  error.rs  mod.rs
src/domain/users/: mod.rs  users.rs
src/modules/: mod.rs
src/modules/audit/: api.rs
src/modules/audit/api/: mod.rs
src/modules/audit/core/: domain.rs  mod.rs
src/modules/audit/core/domain/: audit.rs
src/modules/audit/core/postgres/: audit.rs
src/modules/audit/core/service/: audit.rs
src/modules/audit/postgres/: audit.rs  mod.rs  uow.rs
src/modules/auth/: api.rs  core.rs  mod.rs
src/modules/auth/api/: mod.rs
src/modules/auth/core/: audit_port.rs  http.rs  mod.rs
src/modules/auth/core/domain/: user.rs
src/modules/auth/core/postgres/: user.rs
src/modules/auth/core/service/: user.rs
src/modules/auth/http/: mod.rs
src/modules/auth/postgres/: mod.rs  uow.rs  user.rs
src/modules/auth/service/: user.rs
src/modules/auth/uow/: types.rs
src/postgres/: audit.rs  uow.rs  users.rs
src/shared/: app_state.rs  apperror.rs  http_response.rs  mod.rs  uow.rs
src/shared/postgres/: uow.rs
(+4 files in other folders)
