[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "uuid", "macros", "tls-rustls", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.22"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[features]
default = ["manual-uow"]
callback-uow = []
manual-uow = []